# pflow

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CLAUDE_backup.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  PRD-pflow-master.md  README.md  ROADMAP.md  SECURITY.md  TEMPLATE_README.md  TESTING_RUNTIME_VALIDATION.md  cli-autocomplete-documentation-integration-plan.md  comparison_report.md  hello_workflow.json  integration-plan-selected-concepts.md  llm  mkdocs.yml  output.txt  process  pyproject.toml  test-progress-indicators.md  test_context_format.py  test_metadata_examination.py  test_node_verification.txt  test_runtime_simple.py  test_runtime_validation_demo.py  test_runtime_validation_integration.py  workflow.pflow.md
.archive/2025-06-14/: docs-consistency-review.md  implementation-consistency-review.md
.archive/cli-autocomplete/: cli-autocomplete-documentation-integration-plan.md  cli-autocomplete-evaluation-report.md  cli-autocomplete-evaluation.md
.archive/documentation-refactor/: cli-path-planner-analysis.md  cli-planner-task-updates.md  deduplication-action-plan.md  deduplication-complete-summary-v2.md  docs-ai-navigation-complete.md  docs-improvement-plan.md  docs-inventory-complete.md  documentation-update-analysis.md  documentation-updates-needed.md  duplicate-content-analysis.md  duplication-analysis-report.md  index-ai-inventory-complete.md  (+6 more)
.claude/: settings.json
.claude/hooks/: stop.py  (+7 more)
.cursor/: mcp.json
.taskmaster/: config.json  state.json  versions.md
architecture/: CLAUDE.md  architecture.md  index.md  overview.md  pflow-pocketflow-integration-guide.md  prd-git-tag-nodes.md  prd.md
docs/: CLAUDE.md  PRD-pflow.md  action-based-node-architecture.md  action-nodes.md  ai-agent-context.md  architecture-document.md  architecture.md  autocomplete.md  changelog.mdx  cli-reference.md  cli-runtime.md  components.md  docs.json  examples.md  execution-reference.md  getting-started.md  index.md  index.mdx  installation.md  internal-links-analysis.md  json-schema-for-flows-ir-and-nodesmetadata.md  mcp-guide.md  mcp-http-transport.md  mcp-integration.md  mcp-server.md  modules.md  mvp-scope.md  node-discovery-namespacing-and-versioning.md  node-reference.md  pflow-pocketflow-integration-guide.md  planner-responsibility-functionality-spec.md  planner.md  prd.md  quickstart.mdx  reference-docs-update-summary.md  registry.md  roadmap.mdx  runtime-behavior-specification.md  runtime.md  schemas.md  (+7 more)
documents/: PRD-pflow.md  Planner Responsibility & Functionality Spec.md  Proxy Pattern Update Plan.md  Shared Store + Params Design Pattern in pflow.md  Shared-Store & Parameter Model — Canonical Spec.md  cli-autocomplete-spec.md  component-inventory.md  json-field-extraction-specification.md  json-ir-governance.md  json-schema-for-flows-ir-and-nodesmetadata.md  mcp-server-integrationa-and-security-model.md  node-discovery-namespacing-and-versioning.md  node-metadata-extraction.md  planner-responsibility-functionality-spec.md  runtime-behavior-specification.md  shared-store-cli-runtime-specification.md  shared-store-node-proxy-architecture.md  shell-pipe-native-integration.md  user_stories_and_node_design.md
examples/: README.md  batch-test-parallel.json  batch-test-parallel.pflow.md  batch-test.json  batch-test.pflow.md  enhanced-docstring-examples.py  mcp-filesystem.json  mcp-filesystem.pflow.md  output_validation_demo.json  output_validation_demo.pflow.md  registry_demo.py  runtime_feedback_demo.py  shell_node_demo.py  simple-workflow.json  simple-workflow.pflow.md  test-nested-index.json  test-nested-index.pflow.md  test-worktree.json  test-worktree.pflow.md  test_llm_templates.json  test_llm_templates.pflow.md  workflow_manager_demo.py
external-docs/: llm_json_planning_example.py  llm_structured_outputs_example.py  prompt-caching.md
llm-main/: .gitignore
pocketflow/: CLAUDE.md  PFLOW_MODIFICATIONS.md  __init__.py
releases/: v0.5.0-context.md  v0.6.0-context.md  v0.7.0-context.md  v0.8.0-context.md
scratchpads/: 4.2.md  advanced-pocketflow-analysis-kickoff.md  advanced-pocketflow-analysis-plan.md  ambiguities-resolution-prompt.md  ambiguities-resolution-quickref.md  ambiguities-resolution-usage.md  anthropic-metrics-integration-plan.md  anthropic-sdk-implementation-plan.md  architectural-insights.md  cli-syntax-understanding.md  deduplication-plan-summary.md  deep-insights-reflection.md  docs-files-to-update-summary.md  docs-improvement-complete-summary.md  docs-steps-audit.md  docs-update-plan.md  documentation-contradictions-report.md  documentation-fixes-comprehensive-context.md  documentation-fixes-kickstart-prompt.md  documentation-fixes-next-actions.md  documentation-resolution-plan.md  documentation-updates-summary.md  feature-request-dynamic-batch-indexing.md  handoff-11.3.md  integration-evaluation-prompt.md  integration-test-fixes.md  kickstart-merge-docs-prompt.md  llm-test-status.md  main-page-copy.md  mcp-first-architecture-insights.md  merge-roadmap-mvp-scope-plan.md  missing-nested-workflow-functionality-report.md  mvp-scope-consolidation-analysis.md  nested-workflows-implementation-plan.md  pflow-ai-agent-guide.md  pflow-documentation-ownership-model.md  phase-5-reorganization-complete.md  pocketflow-antipattern-kickstart-prompt.md  pocketflow-antipattern-next-steps-plan.md  pocketflow-antipattern-refactoring-context.md  (+42 more)
scripts/: README.md  add-completion-dates.sh  convert_instructions_to_mcp.py  populate_registry.py  tasks  test_batch_manual.py
tests/: CLAUDE.md  conftest.py  test_cli.py  test_cli_core.py  test_compiler_dynamic_imports.py  test_compiler_foundation.py  test_compiler_integration.py  test_file_nodes.py  test_file_nodes_retry.py  test_foo.py  test_links.py  test_registry.py  test_runtime_validation.py  test_runtime_validation_simple.py  test_scanner.py  test_shell_integration.py
todo/: implement-subtask.md  implementation-roadmap.md  implementation-workflow.md  mvp-implementation-plan.md  refining-subtask.md  tasks.json  workflow-overview.md
tools/: README.md  test_prompt_accuracy.py
(+3102 files in other folders)
