[project]
name = "pflow-cli"
version = "0.8.0"
description = "Reusable CLI workflows from shell, LLM, HTTP, and MCP nodes"
authors = [{ name = "Andreas Falcone", email = "andreas@pflow.run" }]
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
keywords = ["workflow", "cli", "automation", "llm", "mcp", "ai-agent", "agent-skill"]
requires-python = ">=3.10,<4.0"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "click", # CLI framework (more flexible than Typer)
    "jsonschema>=4.20.0", # JSON Schema validation for workflow IR
    "llm>=0.28", # Simon Willison's LLM library for text processing
    "llm-anthropic==0.23", # Anthropic Claude models for planner
    "anthropic>=0.75", # Anthropic SDK for direct API access (thinking/caching)
    "pydantic", # IR/metadata validation (used in planning/ir_models.py)
    "mcp[cli]>=1.17.0", # Model Context Protocol for MCP server support
    "requests>=2.32.5", # HTTP requests library for HttpNode (2.32.5 fixes SSLContext regression)
    "claude-agent-sdk>=0.1.17", # Claude Agent SDK for agentic development node
    "PyYAML>=6.0.0", # YAML parsing for markdown workflow format params and frontmatter
    "llm-gemini>=0.28.1", # Google Gemini models including Gemini 3 Flash
]

# Optional dependencies can be added here for future LLM providers
# [project.optional-dependencies]
# openai = ["llm-openai>=0.1"]

[project.scripts]
pflow = "pflow.cli:cli_main"

[project.urls]
Homepage = "https://pflow.run"
Repository = "https://github.com/spinje/pflow"
Documentation = "https://docs.pflow.run"

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "pytest-xdist>=3.0.0",
    "pre-commit>=2.20.0",
    "tox-uv>=1.11.3",
    "deptry>=0.23.0",
    "mypy>=0.991",
    "ruff>=0.11.5",
    "PyYAML>=6.0.0",
    "types-PyYAML>=6.0.0",
    "types-jsonschema>=4.25.0.20250809",
    "types-requests>=2.32.4.20250809",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
    ".claude/",
    ".cursor/",
    ".github/",
    ".taskmaster/",
    "architecture/",
    "assets/",
    "docs/",
    "examples/",
    "releases/",
    "scratchpads/",
    "scripts/",
    "tests/",
    ".pre-commit-config.yaml",
    "CLAUDE.md",
    "CONTRIBUTING.md",
    "Makefile",
    "SECURITY.md",
    "tox.ini",
    "uv.lock",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pflow"]

[tool.mypy]
files = ["src"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
exclude = ["scripts/debug", ".claude", "scratchpads"]

[[tool.mypy.overrides]]
module = "pflow.pocketflow.*"
ignore_errors = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "serial: marks tests that must run sequentially (deselect with '-m \"not serial\"')",
    "integration: marks integration tests that spawn subprocesses",
]
# Note: We don't set addopts with -n here to allow flexibility
# Use 'make test' for parallel or 'make test-debug' for sequential

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true
exclude = ["src/pflow/pocketflow/*", "tests/pocketflow/*", "scripts/*", ".claude/*", "scratchpads/*", "examples/*"]

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    # Avoid specifying long messages outside the exception class
    "TRY003",
    # Consider moving return statement to else block
    "TRY300",
    # Abstract raise to an inner function
    "TRY301",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"tests/test_integration/test_git_*.py" = ["S603", "S607"]  # Allow subprocess calls for git integration tests
"tests/test_core/test_stdin_no_hang.py" = ["S603", "S607", "UP022"]  # Allow subprocess calls for testing stdin hang issue
"src/pflow/nodes/shell/shell.py" = ["S602"]  # shell=True is intentional for shell node
# S603: Safe subprocess use - hardcoded commands, no user input
"src/pflow/core/llm_config.py" = ["S603"]
"src/pflow/nodes/git/*.py" = ["S603"]
"src/pflow/nodes/github/*.py" = ["S603"]
"tests/test_nodes/test_git/*.py" = ["S603", "S607"]

[tool.ruff.format]
preview = true

[tool.deptry.per_rule_ignores]
DEP002 = ["llm-anthropic", "llm-gemini", "PyYAML"]  # Plugins for llm library, loaded dynamically not imported; PyYAML used by markdown parser (Task 107, in progress)
